# ResNet

./: .gitignore  readme.md
data/: data_provider.py
deploy/: 1.pth2onnx.py  1_pth2onnx.py  2.onnx2trt.py  3.inference.py
deploy/src/: CMakeLists.txt  demo.cpp
train/: data_provider.py  model.py  train.py
